# AWEngine

./: .gitignore  AWEngine  AWengine.hpp  CMakeLists.txt  README.md  buildAndRun.sh  main.cpp
.cache/clangd/index/: _fixes.hpp.D29F04473BFCF680.idx  _vectorize.hpp.7DCB2C3657F70F84.idx  camera.cpp.F0D7A9193E2D3672.idx  camera.hpp.6D2D784306860E12.idx  common.hpp.0E6B2529C97AB2B9.idx  compute_common.hpp.25A6C4544F3B2185.idx  compute_vector_decl.hpp.A9799C205BF85B06.idx  compute_vector_relational.hpp.7F9447C086FC537A.idx  constants.hpp.1098A9BA358093AF.idx  constants.inl.C601F36F9CCA7AD6.idx  context.c.0AC9DF0B08B3FA69.idx  dual_quaternion.hpp.AE004B42855159A9.idx  dual_quaternion.inl.7B5AA03728D7E01E.idx  egl_context.c.F294315AB80C86DF.idx  engine.hpp.61554C32921C8046.idx  engineTools.cpp.75B5DF39E60EF463.idx  engineTools.hpp.F107E8E4913B7E8F.idx  epsilon.hpp.B332E26CC940330A.idx  epsilon.inl.93751150E053DFAA.idx  exponential.hpp.43661286E458B31F.idx  func_common.inl.C1984CB0F72F7517.idx  (+237 more)
devtools/: devtools.cpp  devtools.hpp
engine/: AWEngine.hpp  AWEngineIncludeLibs.hpp  AWEngineObject.cpp  AWEngineObject.hpp  AWEngineWindow.cpp  AWEngineWindow.hpp  button_handler.cpp  button_handler.hpp  camera.cpp  camera.hpp  engine.hpp  engineTools.cpp  engineTools.hpp  engine_config.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
engine/shaders/: fragment.glsl  fragment.txt  vertex.glsl  vertex.txt
render/: camera.cpp  camera.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
shaders/: fragment.txt  vertex.txt
